@@ -6,11 +6,12 @@
 \title{State precarity}
 
 \description{
-Determines the initial state precarity level from the state ordering. (See details.)
+Determines the initial state precarity degree from the state ordering. (See details.)
 }
 
 \usage{
-seqprecstart(seqdata, state.order=alphabet(seqdata), state.equiv=NULL, stprec=NULL)
+seqprecstart(seqdata, state.order=alphabet(seqdata), state.equiv=NULL, stprec=NULL,
+    with.missing=FALSE)
 }
 
 \arguments{
@@ -19,22 +20,27 @@ seqprecstart(seqdata, state.order=alphabet(seqdata), state.equiv=NULL, stprec=NU
   \item{state.order}{Vector of short state labels defining the order of the states. First the less precarious (most positive) state and then the other states in increasing precariousness order. States of the alphabet that are not included here define the non-comparable states.}
 
   \item{state.equiv}{List of state equivalence classes. The classes in the list are each set as the vector of the short labels of the states forming the class. }
+
+  \item{stprec}{Vector of user defined state precarity degrees ordered conformably with the alphabet of seqdata.}
       
-  \item{stprec}{Vector of user defined state precarity levels ordered conformably with the alphabet of seqdata.}
+  \item{with.missing}{Logical. Should the missing state be considered as an element of the alphabet?
+      }
 
 }
 
 
 \details{
-When \code{stprec=NULL}, the initial state precarity levels are set as equivalently spaced values between 0 and 1 assigned to the states in the specified order.
+When \code{stprec=NULL}, the initial state precarity degrees are set as equivalently spaced values between 0 and 1 assigned to the states in the specified order.
 
 Equivalent states get the mean value of the states in the equivalence class.
 
-Incomparable states (those not on the \code{state.order} list and not member of an equivalent class having a state listed in \code{state.order}) receive the average of all state precarity levels.
+Incomparable states (those not on the \code{state.order} list and not member of an equivalent class having a state listed in \code{state.order}) receive the average of all state precarity degrees.
 
 When \code{stprec} is user defined, the provided vector is normalized by its maximal value and mean value of states in a class are assigned to all class members.
 
 Only one state per class needs to be on the state order list. If more than one member is on the state order list they should be listed consecutively. Note that currently no check is performed.
+
+When \code{with.missing=TRUE}, use the \code{seqdata, "nr"} argument to possibly include it in the \code{state.order} or \code{state.equiv}.
 
 }
 
@@ -42,7 +48,7 @@ Only one state per class needs to be on the state order list. If more than one m
 
 \value{
 
-The vector of assigned precarity levels sorted according to the original order of states in the alphabet.
+The vector of assigned precarity degrees sorted according to the original order of states in the alphabet.
 
 
 }
